--- a/Kickbox/Kickbox/ClientApp/package.json
+++ b/Kickbox/Kickbox/ClientApp/package.json
@@ -19,6 +19,7 @@
     "@angular/compiler": "~13.3.5",
     "@angular/core": "~13.3.5",
     "@angular/forms": "~13.3.5",
+    "@angular/google-maps": "^15.2.1",
     "@angular/platform-browser": "~13.3.5",
     "@angular/platform-browser-dynamic": "~13.3.5",
     "@angular/platform-server": "~13.3.5",
@@ -46,6 +47,5 @@
     "karma-jasmine": "~5.0.0",
     "karma-jasmine-html-reporter": "^1.7.0",
     "typescript": "~4.6.3"
-  },
-  "optionalDependencies": {}
+  }
 }
